--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -35,15 +35,33 @@ h1, h2, h3{
 }
 
 h1{
-    font-size: 5rem;
+    font-size: 3.8rem;
+}
+
+@media (min-width: 768px) { 
+    h1{
+        font-size: 5rem;
+    }
 }
 
 h2{
     font-size: 3rem;
 }
 
+@media (min-width: 768px) { 
+    h2{
+        font-size: 4rem;
+    }
+}
+
 h3{
     font-size: 2rem;
+}
+
+@media (min-width: 768px) { 
+    h3{
+        font-size: 3rem;
+    }
 }
 
 .contenedor{
@@ -97,9 +115,20 @@ h3{
 
 .nav-principal{
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
     padding: 2rem 0;
+    align-items: center;
 }
+
+@media (min-width: 768px) { 
+    .nav-principal{
+    justify-content: space-between;
+    flex-direction: row;
+    padding: 2rem 2rem;
+    }
+}
+
+
 
 .enlace{
     text-decoration: none;
@@ -111,7 +140,13 @@ h3{
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center top;
+    height: 25rem;
+}
+
+@media (min-width: 768px) { 
+    .hero{
     height: 55rem;
+    }
 }
 
 .categorias{
