--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -31,7 +31,7 @@ a{
 
 h1, h2, h3{
     font-family: 'Playfair Display', serif;
-    margin: 0 0 5rem 0;
+    margin: 0 0 2rem 0;
 }
 
 h1{
@@ -154,6 +154,20 @@ h3{
     margin-bottom: 6rem;
 }
 
+.categoria{
+    margin-bottom: 2rem;
+}
+
+@media (min-width: 768px) { 
+    .categoria{
+        margin-bottom: 0;
+    }
+}
+
+.categoria img{
+    width: 100%;
+}
+
 .categoria a{
     display: block;
     padding: 2rem;
@@ -166,32 +180,59 @@ h3{
     border-bottom-right-radius: 1rem;
 }
 
-.listado-categorias{
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 2rem;
-    font-size: 2rem;
+@media (min-width: 768px) { 
+    .listado-categorias{
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 2rem;
+        font-size: 2rem;
+    }
 }
+
+
 
 /* Bloque Nosotros */
 
+
 .sobre__nosotros{
-    background-image: linear-gradient( to right, transparent 50%, #037bc0 50%, #037bc0 100% ), url(../img/nosotros.jpg);
-    padding: 10rem 0;
+    background-image: linear-gradient( to bottom, transparent 50%, #037bc0 50%, #037bc0 100% ), url(../img/nosotros.jpg);
     background-repeat: no-repeat;
-    background-size: 100%, 100rem;
-    background-position: left center;
+    background-size: 100%, 70rem;
+    background-position: center, top left;
+}
+
+@media (min-width: 768px) { 
+    .sobre__nosotros{
+        background-image: linear-gradient( to right, transparent 50%, #037bc0 50%, #037bc0 100% ), url(../img/nosotros.jpg);
+        padding: 10rem 0;
+        background-size: 100%, 160rem;
+        background-position: left center;
+    }
 }
 
 .sobre-nosotros-grid{
-    display: flex;
-    justify-content: flex-end;
+    display: grid;
+    grid-template-rows: repeat(2, 1fr);
+}
+
+@media (min-width: 768px) { 
+    .sobre-nosotros-grid{
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: unset;
+        column-gap: 10rem;
+    }
 }
 
 .texto-nosotros{
-    flex-basis: 50%;
-    padding-left: 10rem;
+    grid-row: 2 / 3;
     color: #fff;
+    padding: 5rem;
+}
+
+@media (min-width: 768px) { 
+    .texto-nosotros{
+        grid-column: 2 / 3;
+    }
 }
 
 /* Listado de Productos */
@@ -200,54 +241,67 @@ h3{
     padding-top: 5rem;
 }
 
-.listado-productos{
-    display: grid;
-    grid-template-columns: repeat(6, 1fr);
-    column-gap: 2rem;
-    row-gap: 2rem;
-}
-
-.producto:nth-child(1){
-    grid-column: 1 / 7;
-    display: grid;
-    grid-template-columns: 3fr 1fr;
-}
-
-.producto:nth-child(1) img{
-    height: 43rem;
-    width: 100%;
-    object-fit: cover;
-}
-
-.producto:nth-child(2) img,
-.producto:nth-child(3) img{
-    height: 30rem;
-    width: 100%;
-    object-fit: cover;
-}
-
-.producto:nth-child(2){
-    grid-column: 1/4;
-}
-
-.producto:nth-child(3){
-    grid-column: 4/7;
-}
-
-.producto:nth-child(4){
-    grid-column: 1/3;
-}
-
-.producto:nth-child(5){
-    grid-column: 3/5;
-}
-
-.producto:nth-child(6){
-    grid-column: 5/7;
+@media (min-width: 768px) { 
+    .listado-productos{
+        display: grid;
+        grid-template-columns: repeat(6, 1fr);
+        column-gap: 2rem;
+        row-gap: 2rem;
+    }
+    
+    .producto:nth-child(1){
+        grid-column: 1 / 7;
+        display: grid;
+        grid-template-columns: 3fr 1fr;
+    }
+    
+    .producto:nth-child(1) img{
+        height: 100%;
+        width: 100%;
+        object-fit: cover;
+    }
+    
+    .producto:nth-child(2) img,
+    .producto:nth-child(3) img{
+        height: 30rem;
+        width: 100%;
+        object-fit: cover;
+    }
+    
+    .producto:nth-child(2){
+        grid-column: 1/4;
+    }
+    
+    .producto:nth-child(3){
+        grid-column: 4/7;
+    }
+    
+    .producto:nth-child(4){
+        grid-column: 1/3;
+    }
+    
+    .producto:nth-child(5){
+        grid-column: 3/5;
+    }
+    
+    .producto:nth-child(6){
+        grid-column: 5/7;
+    }
 }
 
 .producto{
     background-color: #037bc0;
+    margin-bottom: 2rem;
+}
+
+@media (min-width: 768px) { 
+    .producto{
+        margin-bottom: 0;
+    }
+}
+
+.producto:last-of-type{
+    margin-bottom: 0;
 }
 
 .texto-producto{
@@ -282,18 +336,46 @@ h3{
     margin-bottom: 5rem;
 }
 
-.grid-footer{
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 2rem;
+@media (min-width: 768px) { 
+    .grid-footer{
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 2rem;
+    }
 }
+
+.grid-footer > div{
+    margin-bottom: 2rem;
+}
+
+@media (min-width: 768px) { 
+    .grid-footer > div{
+        margin-bottom: 0;
+    }
+}
+
+
 
 .grid-footer h3{
     margin-bottom: 2rem;
+    text-align: center;
+}
+
+@media (min-width: 768px) { 
+    .grid-footer h3{
+        text-align: left;
+    }
 }
 
 .footer-menu a{
     display: block;
+    text-align: center;
+}
+
+@media (min-width: 768px) { 
+    .footer-menu a{
+        text-align: left;
+    }
 }
 
 .copy{
