--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -92,9 +92,13 @@ h3{
     text-align: center;
 }
 
-.max-width-30{
-    max-width: 30rem;
+@media (min-width: 768px) { 
+    .max-width-30{
+        max-width: 30rem;
+    }
 }
+
+
 
 /* Header */
 
@@ -396,29 +400,60 @@ h3{
     display: flex;
     flex-direction: column;
     justify-content: center;
+    padding: 5rem;
+}
+
+@media (min-width: 768px) { 
+    .informacion-nosotros{
+        padding: 0;
+    }
 }
 
 /* BLOG */
 
-.contenedor-blog{
-    display: grid;
-    grid-template-columns: 2fr 1fr;
-    column-gap: 4rem;
+@media (min-width: 768px) { 
+    .contenedor-blog{
+        display: grid;
+        grid-template-columns: 2fr 1fr;
+        column-gap: 4rem;
+    }
 }
+
+
 
 .entrada{
     border-bottom: 2px solid #e1e1e1;
     padding-bottom: 4rem;
     margin-bottom: 2rem;
 }
+
+.entrada h2{
+    text-align: center;
+}
+
+@media (min-width: 768px) { 
+    .entrada h2{
+        text-align: left
+        ;
+    }
+}
+
+.contenido-blog{
+    padding: 2rem;
+}
+
 .entrada:last-of-type{
     border: none;
 }
 
-.entrada-meta{
-    display: flex;
-    justify-content: space-between;
+@media (min-width: 768px) { 
+    .entrada-meta{
+        display: flex;
+        justify-content: space-between;
+    }
 }
+
+
 
 .entrada-meta p{
     font-weight: bold;
