--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -80,10 +80,17 @@ h3{
     text-align: center;
     border: none;
     cursor: pointer;
+    width: 100%;
 }
 
 .btn:hover{
     background-color: #769c02;
+}
+
+@media (min-width: 768px) { 
+    .btn{
+        width: auto;
+    }
 }
 
 /* Utilidades */
@@ -464,8 +471,12 @@ h3{
 }
 
 .contenido-entrada-blog{
-    width: 60rem;
+    /* width: 60rem; */
     margin: 0 auto;
+}
+
+.contenido-entrada-blog .imagen img{
+    width: 100%;
 }
 
 /* GALERÍA */
@@ -475,8 +486,22 @@ h3{
     padding: 0;
     margin: 0;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: 1fr;
     gap: 2rem;
+}
+
+@media (min-width: 768px) { 
+    .galeria{
+        grid-template-columns: repeat(3, 1fr);
+    }
+
+    .grid-footer h3{
+        text-align: center;
+    }
+
+    .footer-menu a{
+        text-align: center;
+    }
 }
 
 .galeria img{
